<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.sergon.db_query_cours.ChooseTableActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chooseGoods"
        android:layout_marginTop="26dp"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/Goods" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Creator"
        android:id="@+id/chooseCreator"
        android:layout_below="@+id/chooseGoods"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="onClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Stack"
        android:id="@+id/chooseStack"
        android:layout_below="@+id/chooseCreator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="onClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Place"
        android:id="@+id/choosePlace"
        android:layout_below="@+id/chooseStack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="onClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Copyright"
        android:id="@+id/textView7"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent" />
</RelativeLayout>
