<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowQueryAttActivity"
    android:orientation="horizontal"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TableName"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/tableSpin"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RowName"
        android:id="@+id/rowSpinText"
        android:layout_below="@+id/tableSpin"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/rowSpin"
        android:layout_below="@+id/rowSpinText"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/valueText"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:layout_below="@+id/rowSpin"
        android:visibility="invisible"
        android:hint="@string/Value" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateQurey"
        android:id="@+id/showAttButton"
        android:onClick="onClick"
        android:layout_below="@+id/valueText"
        android:layout_alignEnd="@+id/horizontalScrollView4"
        android:visibility="invisible" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/horizontalScrollView4"
        android:layout_below="@+id/showAttButton"
        android:layout_alignParentEnd="true">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showAttLayout"></TableLayout>
    </HorizontalScrollView>

</RelativeLayout>
