<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.sergon.db_query_cours.CreateQueryActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreteQuery"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createQuery"
        android:layout_below="@+id/textView8"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateQurey"
        android:id="@+id/createQueryExe"
        android:onClick="onClick"
        android:layout_below="@+id/createQuery"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Clear"
        android:id="@+id/createQueryClear"
        android:onClick="onClick"
        android:layout_below="@+id/createQuery"
        android:layout_toEndOf="@+id/createQueryExe" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/createQueryExe">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/horizontalScrollView"
            android:layout_below="@+id/createQueryExe">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/createQueryTable"
                android:textAlignment="center">

            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>

</RelativeLayout>
